fixed event deserialization, project based backgroundRuns and events (WIP), switch to nightsky for computation